# pydependance

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  pytest.ini  requirements-precommit.txt  setup.py
.github/workflows/: python-lint.yml  python-publish.yml  python-test.yml  version-bump.yml
pydependance/: __init__.py  __main__.py  _core.py
pydependence/: __main__.py  _cli.py
pydependence/_core/: module_data.py  module_imports_ast.py  module_imports_loader.py  modules_resolver.py  modules_scope.py  requirements_gen.py  requirements_map.py  requirements_out.py  requirements_writers.py  utils.py
tests/: test.py  test_ast_parser.py  test_module_data.py  test_type_module.py  test_utils.py
tests/test-packages/: C.py  pyproject.toml
tests/test-packages/A/: a1.py  a2.py
tests/test-packages/A/a3/: a3i.py
tests/test-packages/A/a4/: a4i.py
tests/test-packages/B/: b1.py  b2.py
